--- a/index.css
+++ b/index.css
@@ -199,23 +199,29 @@ input {
     padding: 0.75em 1em;
     font-size: 1.25rem;
     font-weight: bold;
-    background: linear-gradient(0.5turn, #ffb671, 50%, rgb(255, 240, 157));
+    /* background: linear-gradient(0.5turn, #ffb671, 50%, rgb(255, 240, 157)); */
+    background-color: #ff7b00;
     border: 4px solid #ff7b00;
     border-radius: 10px;
     color: white;
     max-height: 50px;
     max-width: 150px;
+    cursor: pointer;
+    transition: background 0.25s;
 }
 
 .form .button:hover {
-    background: linear-gradient(0.5turn, #ff7b00, 75%, rgb(255, 217, 0));
+    /* background: linear-gradient(0.5turn, #ff7b00, 75%, rgb(255, 217, 0)); */
+    background: white;
+    color: #ff7b00;
 }
 
 .form .button:active {
-    background: white;
-    color: #ff7b00;
+    background: rgb(255, 182, 114);
+    color: #ffffff;
     padding-right: 1.5em;
     padding-left: 1.5em;
+    border: none;
 }
 
 .footer {
