--- a/index.css
+++ b/index.css
@@ -119,15 +119,19 @@ input {
 }
 
 .photographer a {
+    display: inline-block;
     color: white;
     text-decoration: none;
     font-weight: normal;
     text-align: center;
     margin: 0 auto;
+    transform: scale(1);
+    transition: transform 250ms;
 }
 
 .photographer a:hover {
     color: #ff8d22;
+    transform: scale(1.05);
     font-weight: bold;
 }
 
@@ -174,11 +178,18 @@ input {
 .form input[type="text"] {
     font-size: 1.5rem;
     text-align: center;
-    border: 4px solid #ffb168;
+    border: 2px solid #ffb168;
     border-radius: 4px;
     padding: 0.25em;
     font-weight: bold;
     color: #ff7b00;
+    transform: scale(1);
+    transition: transform 250ms;
+}
+
+.form input[type="text"]:hover,
+.form input[type="text"]:focus {
+    transform: scale(1.2);
 }
 
 .text {
@@ -199,21 +210,23 @@ input {
     padding: 0.75em 1em;
     font-size: 1.25rem;
     font-weight: bold;
-    /* background: linear-gradient(0.5turn, #ffb671, 50%, rgb(255, 240, 157)); */
-    background-color: #ff7b00;
-    border: 4px solid #ff7b00;
+    background: linear-gradient(0.5turn, #ffb671, 50%, rgb(255, 240, 157));
+    border: 1px solid #ff7b00;
     border-radius: 10px;
     color: white;
     max-height: 50px;
     max-width: 150px;
     cursor: pointer;
-    transition: background 0.25s;
+    transform: scale(1);
+    transition: transform 0.25s;
 }
 
-.form .button:hover {
-    /* background: linear-gradient(0.5turn, #ff7b00, 75%, rgb(255, 217, 0)); */
-    background: white;
-    color: #ff7b00;
+.form .button:hover,
+.form .button:focus {
+    transform: scale(1.15);
+    background: linear-gradient(0.5turn, #ff7b00, 75%, rgb(255, 217, 0));
+    color: #fff;
+    border: 4px solid #ff7b00;
 }
 
 .form .button:active {
@@ -227,6 +240,17 @@ input {
 .footer {
     font-size: 0.75rem;
     text-align: center;
+}
+
+.info {
+    height: 95%;
+    min-height: 95vh;
+    align-items: center;
+    justify-content: center;
+}
+
+.info-form .footer {
+    align-self: flex-end;
 }
 
 @media (max-width: 760px) {
@@ -244,8 +268,22 @@ input {
         justify-content: space-around;
         align-items: center;
     }
-    .info-form {
-        min-height: 500px;
+    .dark-veil {
+        width: 100%;
+    }
+    .brand {
+        font-size: 2em;
+        transform: scale3d(1);
+        transition: transform 250ms;
+    }
+    .brand:hover,
+    .brand:focus {
+        transform: scale(1.5);
+    }
+    .info-form,
+    .info {
+        min-height: 60vh;
+        height: 100%;
         flex: 2 1 auto;
     }
     .brand {
