--- a/index.css
+++ b/index.css
@@ -87,10 +87,17 @@ input {
     width: 100%;
 }
 
+.brand>span {
+    color: #ff7b00;
+    font-size: 0.9em;
+    border-bottom: 5px solid #ff7b00;
+    padding: 0;
+}
+
 .motto {
     font-size: 1.5rem;
     text-align: center;
-    margin: 0 auto 1em;
+    margin: 2em auto 1em;
     font-weight: normal;
 }
 
@@ -127,6 +134,7 @@ input {
     margin: 0 auto;
     transform: scale(1);
     transition: transform 250ms;
+    cursor: pointer;
 }
 
 .photographer a:hover {
@@ -175,7 +183,12 @@ input {
     align-self: flex-start;
 }
 
-.form input[type="text"] {
+.email {
+    font-weight: bold;
+    color: #ff7b00;
+}
+
+.form input {
     font-size: 1.5rem;
     text-align: center;
     border: 2px solid #ffb168;
@@ -187,8 +200,8 @@ input {
     transition: transform 250ms;
 }
 
-.form input[type="text"]:hover,
-.form input[type="text"]:focus {
+.form input:hover,
+.form input:focus {
     transform: scale(1.2);
 }
 
@@ -223,7 +236,7 @@ input {
 
 .form .button:hover,
 .form .button:focus {
-    transform: scale(1.15);
+    transform: scale(1.05);
     background: linear-gradient(0.5turn, #ff7b00, 75%, rgb(255, 217, 0));
     color: #fff;
     border: 4px solid #ff7b00;
